--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="brushes">
          <h2>Brushes</h2>
-           <img src="Hacksaw.webp">
+           <img src="hacksaw.webp">
            <h3>Hacksaw Brushes</h3>
              <p class="description">Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="price">Starting at $3.00 / brush.</span></p>
     </div>
@@ -27,7 +27,7 @@
 
     <div class="paint">
     	 <h2>Paint</h2>
-         <img src="Finnish.jpeg">
+         <img src="finnish.jpeg">
 	       <h3>Clean Finnish Paint</h3>
 	         <p class="description">Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.<span class="price">Starting at $5.00 / tube.</span><p>
 	</div>
