--- a/index.html
+++ b/index.html
@@ -1,38 +1,25 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-
+<center>
 <head>
-  <title>Dasmoto's Arts & Crafts</title>
-  <link href="style.css" type="text/css" rel="stylesheet">
+	<title>Excursion</title>
+	<link href="resources/css/style.css" type="text/css" rel="stylesheet">
+	<h1>Discover hidden places in the world around you</h1>
 </head>
-
 <body>
-
-    <div class="header">
-      <h1>Dasmoto's Arts & Crafts</h1>
-    </div>
-    <div class="brushes">
-         <h2>Brushes</h2>
-           <img src="hacksaw.webp">
-           <h3>Hacksaw Brushes</h3>
-             <p class="description">Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="price">Starting at $3.00 / brush.</span></p>
-    </div>
-
-    <div class="frames">
-    	 <h2>Frames</h2>
-         <img src="frames.webp">
-    	   <h3>Art Frames (assorted)</h3>
-    	     <p class="description">Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="price">Starting at $2.00 / frame.</span></p>
-    </div>
-
-    <div class="paint">
-    	 <h2>Paint</h2>
-         <img src="finnish.jpeg">
-	       <h3>Clean Finnish Paint</h3>
-	         <p class="description">Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.<span class="price">Starting at $5.00 / tube.</span><p>
-	</div>
-
+	<div class=download>Download Excursion (Coming soon!)</div>
+	<emded src="resources/videos/excursion.mp4">
+	  <video autoplay muted loop>
+	  <source src="resources/videos/excursion.mp4" type="video/mp4">
+	  	Your browser does not support the video tag.
+	  </video>
+	  <div class=Small_title>Your personal travel guide</div>
+	  	<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+	  	<p><img src="resources/images/camp.webp"></p>
+	  	<p><img src="resources/images/phone.webp"></p>
+	  <div class=Small_title>Coming Soon for iPhone and Android</div>
+	  <div class=download>Download Excursion (Coming soon!)</div>
 </body>
-
-
+</center>
+<div class=footer>© Excursion</div>
 </html>
